--- a/frontstatic/front0/index.html
+++ b/frontstatic/front0/index.html
@@ -4,20 +4,20 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>front base</title>
+		<title>front0 base</title>
 		<link rel="icon" href="../base/assets/images/icons/petitchat.png" />
 
 		<!-- #region style sheets -->
 		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
-		<link rel="stylesheet" href="../front/css/chess.css" />
-		<link rel="stylesheet" href="../front/css/base.css" />
-		<link rel="stylesheet" href="../front/css/shapes.css" />
-		<link rel="stylesheet" href="../front/css/cards.css" />
-		<link rel="stylesheet" href="../front/css/features.css" />
-		<link rel="stylesheet" href="../front/css/table_jquery.css" />
+		<link rel="stylesheet" href="../base/css/chess.css" />
+		<link rel="stylesheet" href="../base/css/base.css" />
+		<link rel="stylesheet" href="../base/css/shapes.css" />
+		<link rel="stylesheet" href="../base/css/cards.css" />
+		<link rel="stylesheet" href="../base/css/features.css" />
+		<link rel="stylesheet" href="../base/css/table_jquery.css" />
 
-		<!-- <link rel="stylesheet" href="./front/css/base.css" />
-		<link rel="stylesheet" href="./front1/css/styles.css" /> -->
+		<!-- <link rel="stylesheet" href="./base/css/base.css" />
+		<link rel="stylesheet" href="./frontstatic/front1/css/styles.css" /> -->
 		<!-- #endregion -->
 	</head>
 	<body>
@@ -49,15 +49,15 @@
 		<!-- #endregion alibs includes -->
 
 		<!-- #region my includes -->
-		<script src="../front/js/_config.js"></script>
-		<script src="../front/js/globals.js"></script>
-		<script src="../front/js/base.js"></script>
-		<script src="../front/features/syms.js"></script>
-		<script src="../front/js/cards.js"></script>
-		<script src="../front/js/features.js"></script>
-		<script src="../front/js/gen_helpers.js"></script>
-		<script src="../front/js/onclick.js"></script>
-		<script src="../front/js/start.js"></script>
+		<script src="../base/js/_config.js"></script>
+		<script src="../base/js/globals.js"></script>
+		<script src="../base/js/base.js"></script>
+		<script src="../base/features/syms.js"></script>
+		<script src="../base/js/cards.js"></script>
+		<script src="../base/js/features.js"></script>
+		<script src="../base/js/gen_helpers.js"></script>
+		<script src="../base/js/onclick.js"></script>
+		<script src="../base/js/start.js"></script>
 		<!-- #endregion includes -->
 	</body>
 </html>
