--- a/frontstatic/front1/index.html
+++ b/frontstatic/front1/index.html
@@ -4,17 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>front 1: index.html</title>
+		<title>front0 1: index.html</title>
 		<link rel="icon" href="../base/assets/images/icons/petitchat.png" />
 
 		<!-- #region style sheets -->
 		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
-		<link rel="stylesheet" href="../front/css/chess.css" />
-		<link rel="stylesheet" href="../front/css/base.css" />
-		<link rel="stylesheet" href="../front/css/shapes.css" />
-		<link rel="stylesheet" href="../front/css/cards.css" />
-		<link rel="stylesheet" href="../front/css/features.css" />
-		<link rel="stylesheet" href="../front/css/table_jquery.css" />
+		<link rel="stylesheet" href="../base/css/chess.css" />
+		<link rel="stylesheet" href="../base/css/base.css" />
+		<link rel="stylesheet" href="../base/css/shapes.css" />
+		<link rel="stylesheet" href="../base/css/cards.css" />
+		<link rel="stylesheet" href="../base/css/features.css" />
+		<link rel="stylesheet" href="../base/css/table_jquery.css" />
 		<!-- #endregion -->
 	</head>
 	<body>
@@ -46,15 +46,15 @@
 		<script src="../base/alibs/jscolor.js"></script>
 		<!-- #endregion alibs includes -->
 		<!-- #region my includes -->
-		<script src="../front/js/_config.js"></script>
-		<script src="../front/js/globals.js"></script>
-		<script src="../front/js/base.js"></script>
-		<script src="../front/features/syms.js"></script>
-		<script src="../front/js/cards.js"></script>
-		<script src="../front/js/features.js"></script>
-		<script src="../front/js/start.js"></script>
+		<script src="../base/js/_config.js"></script>
+		<script src="../base/js/globals.js"></script>
+		<script src="../base/js/base.js"></script>
+		<script src="../base/features/syms.js"></script>
+		<script src="../base/js/cards.js"></script>
+		<script src="../base/js/features.js"></script>
+		<script src="../base/js/start.js"></script>
 
-		<script src="../front1/onclick.js"></script>
+		<script src="../frontstatic/front1/onclick.js"></script>
 
 		<!-- #endregion includes -->
 	</body>
